Force TS config in SonarCloud CI

--- a/.github/workflows/run-code-analysis.yml
+++ b/.github/workflows/run-code-analysis.yml
@@ -32,3 +32,4 @@ jobs:
           args: >
             -Dsonar.organization=innonymous
             -Dsonar.projectKey=innonymous_app
+            -Dsonar.typescript.tsconfigPath=./tsconfig.sonarcloud.json
